[package]
name = "unifac-wasm"
version = "0.1.0"
authors = ["Mikel Muennekhoff <mmuennekhoff+github@gmail.com>", "Peter Heringer <heringer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unifac = { path = "../unifac" } #"0.1.1"
wasm-bindgen = "0.2.70"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
js-sys = "0.3.46"
